update asmdef for Unity2019.3

--- a/Prefabs/VRTK.Prefabs.Runtime.asmdef
+++ b/Prefabs/VRTK.Prefabs.Runtime.asmdef
@@ -1,9 +1,9 @@
 {
     "name": "VRTK.Prefabs.Runtime",
     "references": [
-        "Zinnia.Runtime"
+        "Zinnia.Runtime",
+        "Unity.ugui"
     ],
-    "optionalUnityReferences": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
@@ -16,5 +16,6 @@
         "Malimbe.XmlDocumentationAttribute.dll"
     ],
     "autoReferenced": true,
-    "defineConstraints": []
+    "defineConstraints": [],
+    "versionDefines": []
 }
